--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@google-cloud/bigquery": "^8.1.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
