--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:bitrix":"jest -- /src/bitrix/bitrix.service.spec.ts"
+    "test:bitrix":"jest -- /src/bitrix/bitrix.service.spec.ts",
+    "test:integrational":"jest -- /src/app.service.spec.ts"
   },
   "dependencies": {
     "@google-cloud/bigquery": "^8.1.1",
